# maze-wasm-prims

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.html  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  index_to_build.html  maze_wasm.d.ts  maze_wasm.js  maze_wasm_bg.wasm  maze_wasm_bg.wasm.d.ts  package-lock.json  package.json
.github/workflows/: deploy.yml
src/: block.rs  constants.rs  lib.rs  maze.rs  utils.rs
