[package]
name = "maze-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.59"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }


[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]